# longman

./: .clang-format  CMakeLists.txt  README.md  README_docker.md  conanfile.txt
.github/workflows/: template-janitor.yml
app/: CMakeLists.txt  longman_generator.cpp
benchmark/: CMakeLists.txt  longman_bench.cpp
configured_files/: config.hpp.in
include/iporoskun/: longman.hpp  longman_parameter.hpp  named_type.hpp
src/: CMakeLists.txt  longman.cpp  main.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  longman_test.cpp  tests.cpp
